# aas-cidr-ranges

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  handler.py  main.py  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml  requirements.txt  serverless.yml  target.md  test.py  update_raw.py  whois.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: deploy.yml  main.yml  test.yml
data/: README.md  classification.json  gcp.json  private_ranges.md  zoom.json
data/raw/: asn-alibaba-as37963.json  asn-alibaba-as45102.json  asn-baidu-as38365.json  asn-hetzner-as24940.json  asn-huawei-as136907.json  asn-ionos-as8560.json  asn-ovh-as16276.json  asn-ovh-as35540.json  asn-scaleway-as12876.json  asn-tencent-as132203.json  asn-tencent-as45090.json  atlassian.json  azure-china.json  azure-germany.json  azure-gov.json  azure-public.json  azure-sql-test.txt  bunny-ipv4.json  bunny-ipv6.json  cachefly.txt  datadog.json  digitalocean.txt  docusign.json  fastly.json  gcore.json  gcp.json  gcp.txt  github.json  gitlab.json  grafana-hosted-alerts.txt  grafana-hosted-logs.txt  grafana-hosted-metrics.txt  (+51 more)
doc/: 2022-04-29-udger.com-datacenters.csv  private_ranges.md
src/: async_dns.py  download.py  download_aws.py  download_azure.py  download_fastly.py  download_oracle.py  download_zoom.py  find_google_cidr.sh  parser_akamai.py  parser_aws.py  parser_azure.py  parser_cloudflare.py  parser_fastly.py  parser_gcp.py  parser_github.py  parser_zoom.py  pytrie_support.py  reader.py  whois.py
tests/: test_cidr.py
(+44 files in other folders)
