[project]
name = "aas-cidr-ranges"
version = "1.0.0"
description = "As a service - with a list of CIDR ranges from various services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipwhois>=1.3.0",
    "pytricia>=1.3.0",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
